Bug 1666774 - Have mousedowns on non-scrollbar interrupt APZ animations. r=botond

When the user does a click outside the scrollbar, cancel any ongoing APZ
animations. This restores the behaviour we had prior to bug 1655238. Clicking
on the scrollbar track still leaves the animations ongoing so that bug 1655238
also remains fixed.

The test here is forked from helper_visual_scrollbars_pagescroll.html which was
added in the regressing bug, but is modified to exercise this new scenario.

Differential Revision: https://phabricator.services.mozilla.com/D92477